--- a/pom.xml
+++ b/pom.xml
@@ -40,5 +40,12 @@
             </plugin>
         </plugins>
     </build>
+    <distributionManagement>
+    <snapshotRepository>
+        <id>nexus-snapshots</id>
+        <name>Nexus Snapshot Repository</name>
+        <url>http://52.56.198.154:8081/repository/maven-packages/</url>
+    </snapshotRepository>
+</distributionManagement>
 </project>
 
